Minor changes in UI and also updated the resume

--- a/certifications_skills.html
+++ b/certifications_skills.html
@@ -36,13 +36,16 @@
 					</nav>
 
                 <!-- Skills -->
-                <section id="wrapper">
+                <section id="banner">
                     <header>
                         <div class="inner">
+							<div class="logo"><span class="icon fa-gem"></span></div>
                             <h2>My Skills</h2>
                         </div>
                     </header>
-
+					</section>
+					
+					<section id="wrapper">
                     <!-- Content -->
                         <div class="wrapper">
                             <div class="inner">
@@ -99,17 +102,24 @@
                         </div>
                     </section>    
 				<!-- Certifications -->
-					<section id="wrapper">
+					<section id="banner">
 						<header>
 							<div class="inner">
+								<div class="logo"><span class="icon fa-gem"></span></div>
 								<h2>Certifications and Badges</h2>
 							</div>
 						</header>
-
+						</section>
+						<section id="wrapper">
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
 									<section class="features">
+										<article>
+											<a href="#" class="image"><img src="images/aws.png" height="400"/></a>
+                                            <h3 class="major">AWS Certified Cloud Practitioner</h3>
+                                            <a href="https://www.credly.com/badges/9849930b-55ed-4375-a7a5-62156740a29d/public_url">View Badge on Credly</a>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/security-and-privacy-by-design-foundations.png" height="400"/></a>
                                             <h3 class="major">Security & Privacy by Design</h3>
