--- a/education.html
+++ b/education.html
@@ -36,14 +36,16 @@
 					</nav>
 
 				<!-- Education Details -->
-					<section id="wrapper">
+					<section id="banner">
 						<header>
 							<div class="inner">
-								<h2>Education</h2>
-								<p>I have completed my education from the following institutes.</p>
+								<div class="logo"><span class="icon fa-gem"></span></div>
+									<h2>Education</h2>
+									<p>I have completed my education from the following institutes.</p>
 							</div>
 						</header>
-
+						</section>
+						<section id="wrapper">
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
@@ -78,14 +80,16 @@
 
 					</section>
 					<!-- Position of Responsibilities -->
-					<section id="wrapper">
+					<section id="banner">
 						<header>
 							<div class="inner">
-								<h2>Position of Responsibilites</h2>
-								<p>Based on my potential and leadership skills, I was also given various responsibilites.</p>
+								<div class="logo"><span class="icon fa-gem"></span></div>
+									<h2>Position of Responsibilites</h2>
+									<p>Based on my potential and leadership skills, I was also given various responsibilites.</p>
 							</div>
 						</header>
-
+						</section>
+						<section id="wrapper">
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
