--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="inner">
 					<div class="logo"><span class="icon fa-gem"></span></div>
 						<h2>I am Sourish Das</h2>
-						<p align="justify">A cyber security professional at IBM with 2 years of experience in Data and Application Security domain. I have knowledge about various tools and technologies associated with SAST and DAST. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
+						<p>A cyber security professional at IBM with 3 years of experience in Data and Application Security domain. I have knowledge about various tools and technologies associated with SAST, DAST and Threat Modelling. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
 					</div>
 				</section>
 
@@ -47,8 +47,16 @@
 							<section class="features">
 								<article>
 									<a href="#" class="image"><img src="images/ibmlogo_2.jpg"/></a>
-									<h3 class="major">Associate Consultant - Data & Application Security</h3>
-									<p id="description">Utilising the techniques of DAST and SAST, I perform penetration testing and exploitation on web applications and API endpoints. I assist client teams in the Sec part of DevSecOps cycle by helping them understand the vulnerabilities present in the application/endpoint and suggesting customised fixes as per product's functionality and use-cases it covers.By following Agile methodology, it enables me in quick monitoring of reporting and patching of the vulnerabilities, keeping the product compliant with various global data regulation policies and achieving client satisfaction as well. </p>
+									<h3 class="major">Security Consultant - Data & Application Security</h3>
+									<p id="description">
+										<ul>
+											<li>Technical lead for threat modelling in my team. Ensure that BISO guidelines are followed when product owners are designing an offering.</li>
+											<li>Perform penetration testing and due-diligence audits of applications.</li>
+											<li>Conduct source code review and open-source license risk analysis of libraries being consumed in application source code.</li>
+											<li>Perform security research and knowledge sharing within organiztion. Presented my work on online forums and security conferences.</li>
+											<li>Carry out delivery governance and Skytap support</li>
+										</ul>
+									</p>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/ibm.jpg"/></a>
