--- a/projects.html
+++ b/projects.html
@@ -36,13 +36,16 @@
 					</nav>
 
 				<!-- Education Details -->
-					<section id="wrapper">
+					<section id="banner">
 						<header>
 							<div class="inner">
+								<div class="logo"><span class="icon fa-gem"></span></div>
 								<h2>Projects</h2>
 								<p>In order to reinforce the knowledge gained from theory, I worked on some group projects. These projects helped me to understand the theoretical concepts better and improve my team working skills, presentation skills and leadership skills. Some of my recent projects have been enlisted below.</p>
 							</div>
 						</header>
+					</section>
+					<section id="wrapper">
 
 						<!-- Content -->
 							<div class="wrapper">
@@ -51,7 +54,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/grpc.png" height="300"/></a>
 											<h3 class="major">gRPC Vulnerable CRUD Application</h3>
-											<p id="description">This was a project done to understand the working of gRPC. I developed a vulnerable application with some gRPC specific vulnerabilities that can be exploited to enhance my team's DAST skills.</p>
+											<p id="description">This was a project done to understand the working of gRPC. I developed a vulnerable application with some gRPC specific vulnerabilities that can be exploited to enhance my team's DAST skills. To reinforce the learning, I also created a CTF challenge for the team.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/access.jpg" height="300"/></a>
