--- a/volunteer.html
+++ b/volunteer.html
@@ -36,15 +36,17 @@
 					</nav>
 
 				<!-- Volunteer Activities -->
-					<section id="wrapper">
+					<section id="banner">
 						<header>
 							<div class="inner">
+								<div class="logo"><span class="icon fa-gem"></span></div>
 								<h2>Volunteer Work</h2>
 								<p>I have actively taken part in some volunteer work. 
 									These activities helped me to understand the essence of community work and how can I shape myself for the betterment of the society.</p>
 							</div>
 						</header>
-
+						</section>
+						<section id="wrapper">
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
